<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SHCheckList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- menu -->
    <string name="menu_share">공유하기</string>
    <string name="menu_sort">정렬하기</string>
    <string name="menu_all_select">전부선택</string>
    <string name="menu_all_deselect">전부해제</string>
            
    <!-- activity_main -->
 	<string name="memo_complete_button">완료</string>
	<string name="check_count">00/00</string>
	<string name="memolist_title">메모리스트</string>
	<string name="sucess_import">불러오기 완료</string>	
	<string name="sucess_export">.txt 내보내기 완료</string>	
	<string name="fail_import">불러올 수 없는 형식입니다. (Data 형식 : 체크상태|CheckBox텍스트|설명)</string>	

	<!-- activity_check -->
    <string name="checklist_complete_button">완료</string>
    <string name="checklist_modify_button">편집</string>
    <string name="search_checkitem_text_edittext">검색할 항목의 이름을 입력하시오.</string>
    <string name="add_checkitem_text_edittext">추가할 항목의 이름을 입력하시오.</string>
    <string name="checklist_modifymode_title_editText">메모 제목을 입력하세요.</string>
    <string name="checklist_alertdialog_positivebutton">네</string>
    <string name="checklist_alertdialog_negativebutton">아니오</string>
    <string name="checklist_new_memo_cancel_message">[새 메모 추가]를 취소하시겠습니까?</string>
    <string name="checklist_modify_cancel_message">[편집]을 취소하시겠습니까?</string>
         
	<!-- listitem_memo -->


	<!-- listitem_check -->


	<!-- dialog_sort -->
	<string name="asc_radioButton">올림차순</string>
	<string name="desc_radioButton">내림차순</string>
	<string name="ok_sort_button">확인</string>
	<string name="cancel_sort_button">취소</string>
	<string-array name="sort_standard_array">
		<item>생성순서</item>
		<item>항목이름순</item>
		<item>체크여부순</item>
	</string-array>
	
	<!-- dialog_description -->
	<string name="ok_description_button">확인</string>
	<string name="cancel_description_button">취소</string>
	<string name="copy_clipboard_button">복사</string>	
	<string name="completed_copy_to_clipboard">클립보드에 복사 완료</string>	
		
	<!-- dialog_explorer -->
	<string name="explorer_nodata">데이터가 없습니다.</string>	
	<string name="folder_read_not">폴더를 읽을 수 없습니다!</string>	
	<string name="extension_not">텍스트 파일(.txt)이 아닙니다.</string>	

	<!-- widget -->
	<string name="widget_list_loading">로딩 중...</string>		
	<string name="widget_other_memo_button">다른 메모</string>	
	<string name="widget_app_launcher_button">App 실행</string>	
	
	<!-- Share -->
	<string name="share_title">공유하기</string>
	
</resources>
