<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:layout_margin="@dimen/description_dialog_margin"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText_description"
        android:layout_width="@dimen/dialog_description_width"
        android:layout_height="@dimen/dialog_description_height"
        android:layout_gravity="center_horizontal"
		android:layout_margin="@dimen/description_dialog_margin"
        android:visibility="gone" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="@dimen/dialog_description_width"
        android:layout_height="@dimen/dialog_description_height"
		android:layout_margin="@dimen/description_dialog_margin"
        android:layout_gravity="center_horizontal" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal" >

		<Button
		    android:id="@+id/button_description_ok"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
			android:layout_margin="@dimen/description_dialog_margin"
			android:background="@color/button_background_color"
			android:textColor="@color/button_text_color"
		    android:text="@string/ok_description_button" />

		<Button
		    android:id="@+id/button_description_cancel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
			android:layout_margin="@dimen/description_dialog_margin"
		    android:visibility="gone"
			android:background="@color/button_background_color"
			android:textColor="@color/button_text_color"
		    android:text="@string/cancel_description_button" />
		
		<Button
		    android:id="@+id/button_copy_clipboard"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
			android:layout_margin="@dimen/description_dialog_margin"
			android:background="@color/button_background_color"
			android:textColor="@color/button_text_color"
		    android:text="@string/copy_clipboard_button" />
	</LinearLayout>

</LinearLayout>